--- a/style.css
+++ b/style.css
@@ -13,10 +13,6 @@ body {
     color: #000;
 }
 
-cursor {
-    size: 80px;
-}
-
 /* ASCII title */
 .ascii-title {
     font-size: clamp(8px, 1vw, 16px);
@@ -96,30 +92,39 @@ a:hover {
     left: 0;
     width: 100%;
     background: #000;
-    color: #fff;
+    color: #ffffff;
     padding: 1rem 0;
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .marquee-content {
-    display: inline-block;
-    white-space: nowrap;
-    animation: scroll 20s linear infinite;
+    display: inline-flex;
+    animation: scroll 90s linear infinite;
+}
+
+.marquee-items {
+    display: flex;
+    gap: 2rem;
     font-size: 2rem;
     text-transform: uppercase;
+    padding-right: 2rem;
+    color: #ffffff;
+    z-index: 9999;
 }
 
-.marquee-content span {
-    margin-right: 4rem;
-}
-
-.marquee-content a {
+.marquee-items a {
+    white-space: nowrap;
     color: #fff;
 }
 
 @keyframes scroll {
-    0% { transform: translateX(0); }
-    100% { transform: translateX(-50%); }
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
 }
 
 /* Make space for marquee */
